@@ -92,6 +92,8 @@
  - doc: mention label for nocloud datasource must be 'cidata' [Peter Hurley]
  - ssh_pwauth: fix module to support 'unchanged' and match behavior
    described in documentation [Chris Cosby]
+ - quickly check to see if the previous instance id is still valid to
+   avoid dependency on network metadata service on every boot (LP: #1553815)
 
 0.7.6:
  - open 0.7.6
